[gd_scene load_steps=5 format=3 uid="uid://dkmuwcjvfxtv6"]

[ext_resource type="Script" uid="uid://ku12f32d4f3k" path="res://actors/shop_zone.gd" id="1_tlytx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uden6"]
albedo_color = Color(0.579543, 0.468908, 0.107362, 1)
metallic = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_uden6"]
material = SubResource("StandardMaterial3D_uden6")

[sub_resource type="BoxShape3D" id="BoxShape3D_uden6"]
size = Vector3(7.93945, 1, 7.88184)

[node name="ShopZone" type="Node3D"]
script = ExtResource("1_tlytx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, -0.504106, 0)
mesh = SubResource("PlaneMesh_uden6")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_uden6")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
